@@ -1,3 +1,4 @@
+	* fixed race condition in iconv string converter
 	* fixed error handling in torrent_info constructor
 	* fixed bug in torrent_info::remap_files
 	* fix python binding for wait_for_alert
